# logagent

./: README.md  pyproject.toml
logb/: __init__.py  agent.py  cli.py  config.py  embed.py  index.py  llm.py  profiles.py  rag.py  session.py
logb/eval/: __init__.py  runner.py
logb/eval/corpus/: innovus-code-explain.json  innovus-counts.json  innovus-rca.json
logb/tools/: __init__.py  ask.py  base.py  correlate.py  delegate.py  eda.py  files.py  incident.py  logs.py  manual.py  mentions.py  notes.py  plan.py  profile.py  region_summary.py  shell.py  skills.py  summary.py
manual/: innovus_errors.md
scripts/: route.tcl
scripts/constraints/: top.sdc
skills/diagnose-antenna-violations/: SKILL.md
skills/diagnose-cpf-low-power/: SKILL.md
skills/diagnose-cts-skew/: SKILL.md
skills/diagnose-eco-flow/: SKILL.md
skills/diagnose-floorplan/: SKILL.md
skills/diagnose-import-lef-def/: SKILL.md
skills/diagnose-ir-drop/: SKILL.md
skills/diagnose-license-checkout/: SKILL.md
skills/diagnose-missing-completion/: SKILL.md
skills/diagnose-mmmc-setup/: SKILL.md
skills/diagnose-oom-runtime/: SKILL.md
skills/diagnose-placement-congestion/: SKILL.md
skills/diagnose-power-pg/: SKILL.md
skills/diagnose-routing-drc/: SKILL.md
skills/diagnose-scan-chain/: SKILL.md
skills/diagnose-si-crosstalk/: SKILL.md
skills/diagnose-timing-violations/: SKILL.md
skills/interpret-message-code/: SKILL.md
tests/: test_logb.py
